docs/7.55/md/abenoperands.md
---
title: "Operands"
description: |
  Typical ABAP operands(https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenabap_operand_glosry.htm 'Glossary Entry') are: -   Data objects of the same ABAP program Data objects in operand positions are modified (write positions(https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US
version: "7.55"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenoperands.htm"
abapFile: "abenoperands.htm"
keywords: ["do", "if", "try", "class", "data", "types", "abenoperands"]
---

* * *

AS ABAP Release 755, ©Copyright 2020 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenabap_reference.htm) →  [ABAP Syntax](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenabap_syntax.htm) →  [ABAP Statements](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenabap_statements.htm) → 

Operands

Typical [ABAP operands](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenabap_operand_glosry.htm "Glossary Entry") are:

-   Data objects of the same ABAP program
    Data objects in operand positions are modified ([write positions](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenwriting_position_glosry.htm "Glossary Entry")) or evaluated ([read positions](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenreading_position_glosry.htm "Glossary Entry")).

-   Functions and expressions
    At many read positions and some write positions), functions and expressions instead of data objects can be specified. The statement then works with the return value of the function or with the result of the expression.

-   Types from the same program or the repository
    Types such as data types, classes, or interfaces are specified in [declarations](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenabap_declarations.htm), [typings](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abentyping.htm), or when [addressing components](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenoperands_names.htm).

-   Callable units from the same program or the repository
    Callable units such as [procedures](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenprocedure_glosry.htm "Glossary Entry") or ABAP programs are called during the execution of the statement.
    

For more information:

-   [Names for operands](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenoperands_names.htm)

-   [Escape character for names](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abennames_escaping.htm)

-   [Specifying operands](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenoperands_specifying.htm)

-   [Operand type](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abendata_objects_usage.htm)

-   [Data objects in operand positions](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenoperands_data_objects.htm)

-   [Functions and expressions in operand positions](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenoperands_expressions.htm)

Continue
[Names for Single Operands](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenoperands_names.htm)
[Escape Character for Names](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abennames_escaping.htm)
[Specifying Individual Operands](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenoperands_specifying.htm)
[Operand Type](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abendata_objects_usage.htm)
[Data Objects in Operand Positions](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenoperands_data_objects.htm)
[Functions and Expressions in Operand Positions](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenoperands_expressions.htm)