docs/7.57/md/abenoperands.md
---
title: "Operands"
description: |
  Typical ABAP operands(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_operand_glosry.htm 'Glossary Entry') are: -   Data objects of the same ABAP program Data objects in operand positions are modified (write positions(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US
version: "7.57"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenoperands.htm"
abapFile: "abenoperands.htm"
keywords: ["do", "if", "try", "class", "data", "types", "abenoperands"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_reference.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: Operands, ABENOPERANDS, 757%0D%0A%0D%0AError:%0D%0A%0D%0A%0D%0A%0D%0ASuggestion for i
mprovement:)

Operands

Typical [ABAP operands](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_operand_glosry.htm "Glossary Entry") are:

-   Data objects of the same ABAP program
    
    Data objects in operand positions are modified ([write positions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenwrite_position_glosry.htm "Glossary Entry")) or evaluated ([read positions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenread_position_glosry.htm "Glossary Entry")).
    
-   Functions and expressions
    
    At many read positions and some write positions, functions and expressions instead of data objects can be specified. The statement then works with the return value of the function or with the result of the expression.
    
-   Types from the same program or the repository
    
    Types such as data types, classes, or interfaces are specified in [declarations](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_declarations.htm), [typings](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abentyping.htm), or when [addressing components](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenoperands_names.htm).
    
-   Callable units from the same program or the repository
    
    Callable units such as [procedures](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenprocedure_glosry.htm "Glossary Entry") or ABAP programs are called during the execution of the statement.
    

The following topics provide detailed information about operands:

-   [Data Objects in Operand Positions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenoperands_data_objects.htm)
-   [Functions and Expressions in Operand Positions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenoperands_expressions.htm)

Continue
[Data Objects in Operand Positions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenoperands_data_objects.htm)
[Functions and Expressions in Operand Positions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenoperands_expressions.htm)